--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -2,7 +2,6 @@
 $baseline: 1rem;
 $bl: $baseline;
 $b: $bl;
-
 // Colors
 $clr_brand: #a1213d;
 $clr_black: black;
@@ -10,49 +9,51 @@ $clr_grey-dark: #292c32;
 $clr_grey-mid: #494c52;
 $clr_grey-light: whitesmoke;
 $clr_white: white;
-
 $clr_error: red;
 $clr_success: green;
 $clr_warning: tomato;
-
 $clr_bg-accent: $clr_grey-light;
 $clr_bg-main: $clr_white;
-
 $clr_shadow: $clr_black;
-
 // Fonts
 //@import url( '' );
-$font_face-main: "Overpass", Arial, "Helvetica Neue", Helvetica, sans-serif;
-$font_face-accent: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif;
-
+$font_face-main: -apple-system,
+BlinkMacSystemFont,
+"Segoe UI",
+Roboto,
+Helvetica,
+Arial,
+sans-serif,
+"Apple Color Emoji",
+"Segoe UI Emoji",
+"Segoe UI Symbol";
+$font_face-accent: "Comfortaa",
+Arial,
+"Helvetica Neue",
+Helvetica,
+sans-serif;
 $font_clr-main: $clr_grey-dark;
-
 $font_size-xsm: ($b * 0.75);
 $font_size-sml: ($b * 0.8);
 $font_size-std: ($b * 1);
 $font_size-med: ($b * 1.3);
 $font_size-lrg: ($b * 1.6);
 $font_size-xlg: ($b * 2);
-
-$line-height: 1.8;
+$line-height: 1.8em;
 $lh: $line-height;
-
 // Opacity
 $opacity-transparent: 0;
 $opacity-standard: 0.66;
 $opacity-less: 0.33;
 $opacity-least: 0.16;
 $opacity-solid: 1;
-
 // CSS3 Transitions
 $ease-main: cubic-bezier(0.64, 0.22, 0.69, 0.98);
-$ease-bounce: cubic-bezier(.66,-0.59,.39,1.51);
-
+$ease-bounce: cubic-bezier(.66, -0.59, .39, 1.51);
 // Transition Speeds
 $speed-fastest: 100ms;
 $speed-fast: 250ms;
 $speed-std: 500ms;
 $speed-slow: 800ms;
 $speed-slowest: 1000ms;
-
 $max-width: 1440px;
