--- a/css/elements/_page-content.scss
+++ b/css/elements/_page-content.scss
@@ -1,9 +1,11 @@
 .single-post main.central-column {
 	max-width: 100% !important;
 }
+
 .single-post main.grid_container {
 	padding: 0 !important;
 }
+
 .single-post .post-single {
 	margin: 0 !important;
 }
@@ -11,19 +13,20 @@
 article.page--single {
 	width: 100%;
 	.page__content {
-    background: $clr_bg-main;
+		background: $clr_bg-main;
 		position: relative;
 		z-index: 110;
 		font-size: $font_size-std;
 		max-width: 640px;
 		margin: 0 auto;
 		padding: $baseline;
-		line-height: 1.75;
+		line-height: $lh;
 		text-align: left;
-		ul, ol {
+		ul,
+		ol {
 			padding: $baseline ($baseline * 2);
 			li {
-				line-height: 1.5;
+				line-height: $lh;
 				padding-bottom: ($baseline / 2);
 				&:last-child {
 					padding-bottom: 0;
@@ -33,8 +36,7 @@ article.page--single {
 		.intro {
 			font-family: $font_face-accent !important;
 			font-size: $font_size-med;
-			font-weight: 200;
-			line-height: 1.5;
+			line-height: $lh;
 			p {
 				font-family: inherit;
 				font-size: inherit;
@@ -42,11 +44,19 @@ article.page--single {
 				line-height: inherit;
 			}
 		}
-		h1, h2, h3, h4, h5, h6 {
-			line-height: 125%;
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
+			line-height: $lh;
 			margin-bottom: $baseline;
 		}
-		.alignleft, .alignright, .aligncenter, .alignnone {
+		.alignleft,
+		.alignright,
+		.aligncenter,
+		.alignnone {
 			display: block;
 			margin-top: $baseline;
 			margin-bottom: $baseline;
@@ -62,18 +72,22 @@ article.page--single {
 			margin-left: $baseline;
 			margin-right: 0;
 		}
-		.aligncenter, .alignnone {
+		.aligncenter,
+		.alignnone {
 			float: none;
 			margin-left: auto;
 			margin-right: auto;
 		}
-		img, figure, .wp-caption {
+		img,
+		figure,
+		.wp-caption {
 			display: block;
 			max-width: 100% !important;
 			height: auto !important;
 			margin: 0 auto;
 		}
-		figcaption, .wp-caption-text {
+		figcaption,
+		.wp-caption-text {
 			display: block;
 			width: 100%;
 			padding: ($baseline / 2);
@@ -99,14 +113,20 @@ article.page--single {
 			a {
 				text-decoration: none;
 			}
-			a span, span, span a, cite, a cite, cite a {
+			a span,
+			span,
+			span a,
+			cite,
+			a cite,
+			cite a {
 				display: block;
 				text-align: right;
 				&:before {
 					content: "~ ";
 				}
 			}
-			&:before, &:after {
+			&:before,
+			&:after {
 				content: "";
 				display: table;
 				clear: both;
