--- a/css/elements/post/_image-hero.scss
+++ b/css/elements/post/_image-hero.scss
@@ -66,15 +66,14 @@ header.post__header {
 		}
 	}
 	.hero-image {
-		height: 400px;
+		height: 30rem;
 	}
 }
 
 .hero-image {
 	display: table;
 	width: 100%;
-	height: 400px;
-	height: 80vh;
+	height: 90vh;
 	overflow: hidden;
 	position: relative;
 }
