--- a/css/base/_animations.scss
+++ b/css/base/_animations.scss
@@ -3,56 +3,47 @@
 	100% {
 		transform: scale(1);
 	}
-
 	50% {
 		transform: scale(1.1);
 	}
 }
+
 @keyframes insistant {
 	0% {
 		transform: rotate(0deg) scaleX(1.00) scaleY(1.00);
 	}
-
 	10% {
 		transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
 	}
-
 	20% {
 		transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
 	}
-
 	30% {
 		transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	40% {
 		transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	50% {
 		transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	60% {
 		transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	70% {
 		transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	80% {
 		transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	90% {
 		transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
 	}
-
 	100% {
 		transform: rotate(0deg) scaleX(1.20) scaleY(1.20);
 	}
 }
+
 // Some general examples and generator
 // http://cssanimate.com/
 /*
@@ -61,67 +52,65 @@
   http://codepen.io/collection/AxKOdY/2/
   http://codepen.io/collection/AxKOdY/3/
 */
+
 @keyframes arrowbounce {
 	0% {
 		transform: translate(0px, 0px);
 	}
-
 	20% {
 		transform: translate(100%, 0px);
 	}
-
 	50% {
 		transform: translate(-5px, 0px);
 	}
-
 	70% {
 		transform: translate(0px, 0px);
 	}
-
 	100% {
 		transform: translate(0px, 0px);
 	}
 }
+
 @keyframes underline {
 	0% {
 		width: 0;
 		left: 0;
 	}
-
 	50% {
-		width: 100px;
+		width: calc(100% - 0.75rem);
 		left: 0;
 	}
-
 	100% {
 		width: 0;
-		left: 100px;
+		left: calc(100% - 0.75rem);
 	}
 }
 
-@include keyframes(fade-out-in){
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
+@include keyframes(fade-out-in) {
+	0%,
+	100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
 }
 
-@include keyframes(spin){
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
+@include keyframes(spin) {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
 }
 
-@include keyframes(pulse){
-  0%, 100% {
-    transform: scale(1, 1);
-  }
-  50% {
-    transform: scale(1.2, 1.2);
-  }
+@include keyframes(pulse) {
+	0%,
+	100% {
+		transform: scale(1, 1);
+	}
+	50% {
+		transform: scale(1.2, 1.2);
+	}
 }
