--- a/css/elements/post/_post-teaser.scss
+++ b/css/elements/post/_post-teaser.scss
@@ -2,7 +2,7 @@
 	display: inline-block;
 	vertical-align: top;
 	background: $clr_white;
-	box-shadow: -1px -1px 0 rgba($clr_black, 0.1), 1px 1px 0 rgba($clr_black, 0.1);
+	box-shadow: -0.0625rem -0.0625rem 0 rgba($clr_black, 0.1), 0.0625rem 0.0625rem 0 rgba($clr_black, 0.1);
 	position: relative;
 	.inner {
 		padding: 2rem;
