--- a/css/global/_global.scss
+++ b/css/global/_global.scss
@@ -1,17 +1,15 @@
 html {
 	font-size: 18px;
 	@media (min-width: 768px) {
-		font-size: between(30px, 18px, 768px, $max-width);
+		font-size: between(22px, 18px, 768px, $max-width);
 	}
 	@media (min-width: $max-width) {
 		font-size: 20px;
 	}
 	@media (min-width: 1920px) {
-		font-size: 24px;
+		font-size: 22px;
 	}
-	
 	-webkit-overflow-scrolling: touch;
-
 	* {
 		@include box-sizing(border-box);
 		@include textSize(none);
@@ -31,58 +29,31 @@ body {
 	margin: 0;
 	overflow-x: hidden;
 	@include box-sizing(border-box);
-	// Background
-	background-color: $clr_bg-accent;
-	// Text
+	@supports (scroll-behavior: smooth) {
+		scroll-behavior: smooth;
+	} // Background
+	background-color: $clr_bg-accent; // Text
 	::-moz-selection {
 		color: $clr_bg-main;
 		background: rgba($clr_black, $opacity-solid);
 	}
-
 	::selection {
 		color: $clr_bg-main;
 		background: rgba($clr_black, $opacity-solid);
-	}
-	// Define the centralised maximum width for the main body content
+	} // Define the centralised maximum width for the main body content
 	.container {
 		padding: 0;
 		font-size: 0;
 		text-align: center;
 	}
-
 	#main {
 		transform: translate(0, 0);
 		-webkit-transform: translate(0, 0);
 		transition: $ease-main $speed-fast;
-
 		&.open {
 			transform: translate(-300px, 0);
 			-webkit-transform: translate(-300px, 0);
 		}
-	}
-
-}
-// Scrollbars - Chrome/WebKit only. Will appear as normal in other browsers.
-::-webkit-scrollbar {
-	width: ($baseline / 2);
-	background: rgba($clr_black, $opacity-solid);
-}
-
-::-webkit-scrollbar-track {
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: calc(100% - 10px);
-}
-
-::-webkit-scrollbar-thumb {
-	background: rgba($clr_black, $opacity-solid);
-	border: 1px solid rgba($clr_bg-main, $opacity-standard);
-	@include border-radius(10px);
-
-	&:hover {
-		background: rgba($clr_grey-mid, $opacity-solid);
 	}
 }
 
