--- a/css/base/_normalise.scss
+++ b/css/base/_normalise.scss
@@ -1,6 +1,5 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
-
 /**
  * 1. Set default font family to sans-serif.
  * 2. Prevent iOS text size adjust after orientation change, without disabling
@@ -23,7 +22,6 @@ html {
   box-sizing: inherit;
 }
 
-
 /**
  * Remove default margin.
  */
@@ -32,10 +30,8 @@ body {
   margin: 0;
 }
 
-
 /* HTML5 display definitions
    ========================================================================== */
-
 
 /**
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
@@ -60,7 +56,6 @@ summary {
   display: block;
 }
 
-
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
@@ -76,7 +71,6 @@ video {
   /* 2 */
 }
 
-
 /**
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
@@ -86,7 +80,6 @@ audio:not([controls]) {
   display: none;
   height: 0;
 }
-
 
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
@@ -98,10 +91,8 @@ template {
   display: none;
 }
 
-
 /* Links
    ========================================================================== */
-
 
 /**
  * Remove the gray background color from active links in IE 10.
@@ -110,7 +101,6 @@ template {
 a {
   background-color: transparent;
 }
-
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
@@ -121,10 +111,8 @@ a:hover {
   outline: 0;
 }
 
-
 /* Text-level semantics
    ========================================================================== */
-
 
 /**
  * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
@@ -133,7 +121,6 @@ a:hover {
 abbr[title] {
   border-bottom: 1px dotted;
 }
-
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
@@ -144,7 +131,6 @@ strong {
   font-weight: bold;
 }
 
-
 /**
  * Address styling not present in Safari and Chrome.
  */
@@ -152,7 +138,6 @@ strong {
 dfn {
   font-style: italic;
 }
-
 
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
@@ -164,6 +149,14 @@ h1 {
   margin: 0.67em 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
 
 /**
  * Address styling not present in IE 8/9.
@@ -174,7 +167,6 @@ mark {
   color: #000;
 }
 
-
 /**
  * Address inconsistent and variable font size in all browsers.
  */
@@ -182,7 +174,6 @@ mark {
 small {
   font-size: 80%;
 }
-
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
@@ -204,10 +195,8 @@ sub {
   bottom: -0.25em;
 }
 
-
 /* Embedded content
    ========================================================================== */
-
 
 /**
  * Remove border when inside `a` element in IE 8/9/10.
@@ -217,7 +206,6 @@ img {
   border: 0;
 }
 
-
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
@@ -226,10 +214,8 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-
 /* Grouping content
    ========================================================================== */
-
 
 /**
  * Address margin not present in IE 8/9 and Safari.
@@ -238,7 +224,6 @@ svg:not(:root) {
 figure {
   margin: 1em 40px;
 }
-
 
 /**
  * Address differences between Firefox and other browsers.
@@ -250,7 +235,6 @@ hr {
   height: 0;
 }
 
-
 /**
  * Contain overflow in all browsers.
  */
@@ -258,7 +242,6 @@ hr {
 pre {
   overflow: auto;
 }
-
 
 /**
  * Address odd `em`-unit font size rendering in all browsers.
@@ -272,16 +255,13 @@ samp {
   font-size: 1em;
 }
 
-
 /* Forms
    ========================================================================== */
-
 
 /**
  * Known limitation: by default, Chrome and Safari on OS X allow very limited
  * styling of `select`, unless a `border` property is set.
  */
-
 
 /**
  * 1. Correct color not being inherited.
@@ -303,7 +283,6 @@ textarea {
   /* 3 */
 }
 
-
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
  */
@@ -311,7 +290,6 @@ textarea {
 button {
   overflow: visible;
 }
-
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -325,7 +303,6 @@ select {
   text-transform: none;
 }
 
-
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
  *    and `video` controls.
@@ -336,7 +313,6 @@ select {
 
 button,
 html input[type="button"],
-
 /* 1 */
 
 input[type="reset"],
@@ -347,7 +323,6 @@ input[type="submit"] {
   /* 3 */
 }
 
-
 /**
  * Re-set default cursor for disabled elements.
  */
@@ -356,7 +331,6 @@ button[disabled],
 html input[disabled] {
   cursor: default;
 }
-
 
 /**
  * Remove inner padding and border in Firefox 4+.
@@ -368,7 +342,6 @@ input::-moz-focus-inner {
   padding: 0;
 }
 
-
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
@@ -377,7 +350,6 @@ input::-moz-focus-inner {
 input {
   line-height: normal;
 }
-
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -395,7 +367,6 @@ input[type="radio"] {
   /* 2 */
 }
 
-
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
  * `font-size` values of the `input`, it causes the cursor style of the
@@ -406,7 +377,6 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
-
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
@@ -423,7 +393,6 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
  * Safari (but not Chrome) clips the cancel button when the search input has
@@ -435,7 +404,6 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-
 /**
  * Define consistent border, margin, and padding.
  */
@@ -445,7 +413,6 @@ fieldset {
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
-
 
 /**
  * 1. Correct `color` not being inherited in IE 8/9/10/11.
@@ -459,7 +426,6 @@ legend {
   /* 2 */
 }
 
-
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
  */
@@ -467,7 +433,6 @@ legend {
 textarea {
   overflow: auto;
 }
-
 
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
@@ -478,10 +443,8 @@ optgroup {
   font-weight: bold;
 }
 
-
 /* Tables
    ========================================================================== */
-
 
 /**
  * Remove most spacing between table cells.
