SCR-13 - Headers too bold

--- a/style.css
+++ b/style.css
@@ -540,11 +540,7 @@ button:focus, select:focus, input:focus, textarea:focus {
   [class*="content"] h4,
   [class*="content"] h5,
   [class*="content"] h6 {
-    display: block;
-    padding: 0;
-    margin: 0;
-    font-family: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-weight: normal; }
+    font-family: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif; }
   [class*="content"] h1 {
     font-size: 2rem; }
   [class*="content"] h2 {
@@ -1242,8 +1238,10 @@ article.post-single {
     article.post-single .post__author--bio h5,
     article.post-single .post__content h6,
     article.post-single .post__author--bio h6 {
-      line-height: 125%;
-      margin: 2em 0 0.5em 0; }
+      display: block;
+      padding: 0;
+      font-weight: normal;
+      margin: 3em 0 0.5em 0; }
     article.post-single .post__content .aligncenter, article.post-single .post__author--bio .aligncenter,
     article.post-single .post__content .alignleft,
     article.post-single .post__author--bio .alignleft,
