--- a/css/elements/post/_post-single.scss
+++ b/css/elements/post/_post-single.scss
@@ -43,8 +43,10 @@ article.post-single {
 		h4,
 		h5,
 		h6 {
-			line-height: 125%;
-			margin: 2em 0 0.5em 0;
+			display: block;
+			padding: 0;
+			font-weight: normal;
+			margin: 3em 0 0.5em 0;
 		}
 		.aligncenter,
 		.alignleft,
